--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ small {
   align-items: center;
   gap: 2.3rem;
   margin-left: 1rem;
+  margin-bottom: 3px;
 }
 h3.logo {
   margin: 0px 0px 0.2rem 0px;
@@ -33,4 +34,37 @@ h3.logo {
   border-left: 1px solid var(--second-color);
   border-right: 1px solid var(--second-color);
   height: 100%;
+}
+.coverPic {
+  display: block;
+}
+.profileImg {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+  border: 4px solid rgb(0, 0, 0);
+  margin-top: -60px;
+  margin-left: 20px;
+}
+.bottomIcon {
+  display: flex;
+  justify-content: space-between;
+}
+h4.following {
+  margin: 0;
+  padding: 7px;
+  border-radius: 10px;
+  border: 1px solid var(--second-color);
+}
+.icons {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+  gap: 1rem;
+}
+.border {
+  border: 1px solid var(--second-color);
+  font-size: 30px;
+  padding: 5px;
+  border-radius: 50%;
 }
