--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,18 @@
 * {
   box-sizing: border-box;
-  color: white;
 }
 :root {
   --second-color: #71767b;
+  --blue-color: rgb(33, 157, 240);
+}
+.text-white {
+  color: white;
+}
+.text-secondary {
+  color: var(--second-color);
+}
+.text-info {
+  color: var(--blue-color);
 }
 .App {
   background-color: rgb(0, 0, 0);
@@ -53,7 +62,7 @@ h3.logo {
 h4.following {
   margin: 0;
   padding: 7px;
-  border-radius: 10px;
+  border-radius: 20px;
   border: 1px solid var(--second-color);
 }
 .icons {
@@ -67,4 +76,120 @@ h4.following {
   font-size: 30px;
   padding: 5px;
   border-radius: 50%;
+}
+.details {
+  margin-left: 20px;
+}
+.reactComp {
+  margin-top: 14px;
+}
+.link {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
+.blueColor {
+  color: var(--blue-color);
+  margin-right: 0.8rem;
+  text-decoration: none;
+}
+.m-0 {
+  margin: 0px;
+}
+.numberFollow {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+.ms-2 {
+  margin-left: 1.2rem;
+}
+.footer {
+  display: flex;
+  margin-top: 1rem;
+}
+.img1,
+.img2 {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+.img1 {
+  display: block;
+}
+.img2 {
+  display: block;
+  margin-left: -11px;
+}
+.me {
+  margin-right: 3px;
+}
+.imgBox {
+  margin-right: 0.5rem;
+  display: flex;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-bottom: 1px solid var(--second-color);
+  margin-top: 2.5rem;
+}
+.list li {
+  padding-bottom: 0.5rem;
+}
+.list li:first-child {
+  border-bottom: 2px solid var(--blue-color);
+}
+.top {
+  display: flex;
+  align-items: center;
+  color: #71767b;
+  gap: 0.5rem;
+  margin-left: 3rem;
+  margin-top: 4px;
+}
+.img-profile {
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+}
+.bottom {
+  display: flex;
+  align-items: center;
+  margin-top: 0.2rem;
+}
+.row {
+  display: flex;
+  gap: 5px;
+}
+.detailBox {
+  margin-left: 17px;
+}
+.space-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.me-5 {
+  margin-right: 0.8rem;
+}
+.iconList {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 1rem;
+  margin-top: 1rem;
+  border-bottom: 1px solid var(--second-color);
+  padding-bottom: 0.6rem;
+}
+.item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
