--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+body {
+  margin: 0;
+}
 :root {
   --second-color: #71767b;
   --blue-color: rgb(33, 157, 240);
@@ -16,8 +19,9 @@
 }
 .App {
   background-color: rgb(0, 0, 0);
-  height: 100vh;
+  padding-bottom: 100px;
   margin: 0;
+  padding: 0;
 }
 .home {
   display: grid;
@@ -32,6 +36,7 @@ small {
   gap: 2.3rem;
   margin-left: 1rem;
   margin-bottom: 3px;
+  margin-top: 10px;
 }
 h3.logo {
   margin: 0px 0px 0.2rem 0px;
@@ -106,7 +111,7 @@ h4.following {
 }
 .footer {
   display: flex;
-  margin-top: 1rem;
+  margin-top: 0.8rem;
 }
 .img1,
 .img2 {
@@ -138,7 +143,7 @@ ul {
   justify-content: space-around;
   align-items: center;
   border-bottom: 1px solid var(--second-color);
-  margin-top: 2.5rem;
+  margin-top: 1.9rem;
 }
 .list li {
   padding-bottom: 0.5rem;
@@ -179,6 +184,9 @@ ul {
 .me-5 {
   margin-right: 0.8rem;
 }
+.me-1{
+  margin-right: .2rem;
+}
 .iconList {
   display: flex;
   justify-content: space-around;
@@ -192,4 +200,40 @@ ul {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+.mt-2 {
+  margin-top: 0.3rem;
+  margin-bottom: 2rem;
+}
+.topItem {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  margin-left: 2.1rem;
+}
+.person {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.follow {
+  background: white;
+  color: black;
+  border-radius: 29px;
+  padding: 7px 11px;
+}
+.textBottom {
+  margin-left: 4.4rem;
+}
+.my-5 {
+  display: block;
+  margin-top: 1.2rem;
+  padding-bottom: 1.2rem;
+  padding-left: 1rem;
+  border-bottom: 1px solid var(--second-color);
+  margin-bottom: 10px;
+}
+.box {
+  display: flex;
+  align-items: center;
 }
