--- a/src/App.css
+++ b/src/App.css
@@ -239,7 +239,12 @@ ul {
 }
 
 /* Side Bar Section Style */
-
+.my-3 {
+  display: block;
+  margin-top: 1.2rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.6rem;
+}
 .imgLogo {
   height: 70px;
   width: 100px;
@@ -262,4 +267,31 @@ ul {
   border-radius: 20px;
   background: var(--blue-color);
   color: white;
+}
+.w-75 {
+  width: 75%;
+  margin-left: 1rem;
+}
+.search {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 10px;
+  border-radius: 20px;
+  width: 100%;
+  background-color: #16181c;
+}
+.mb-4 {
+  margin-bottom: 0.7rem;
+}
+.pages {
+  padding: 7px;
+  border-radius: 10px;
+  width: 100%;
+  background-color: #16181c;
+}
+.title {
+  padding-top: 3px;
+  padding-left: 3px;
+  margin-bottom: 0.5rem;
 }
