--- a/src/App.css
+++ b/src/App.css
@@ -295,3 +295,25 @@ ul {
   padding-left: 3px;
   margin-bottom: 0.5rem;
 }
+.itemTrend {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 0.8rem;
+}
+.cont {
+  margin-top: 1rem;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+.card .itemFlex {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+}
